UCF-APR2.4/ftr main/force-app/main/default/objects/Vendor_Connectivity__c/Vendor_Connectivity__c.object-meta.xml
<CustomObject>
    <label>Vendor Connectivity</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Vendor Connectivity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Connectivity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>