UCF-APR2.4/ftr main/force-app/main/default/objects/Vendor_Connectivity__c/fields/Converted_Speed_to_MB__c.field-meta.xml
<CustomField>
    <fullName>Converted_Speed_to_MB__c</fullName>
    <formula>TRIM(LEFT(Speed__c,LEN(Speed__c)-2))</formula>
    <label>Converted Speed to MB</label>
    <type>Text</type>
</CustomField>