UCF-APR2.4/ftr main/force-app/main/default/objects/Vendor_Connectivity__c/fields/Elligible_Products__c.field-meta.xml
<CustomField>
    <fullName>Elligible_Products__c</fullName>
    <label>Elligible Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>