UCF-APR2.4/ftr main/force-app/main/default/objects/Vendor_Connectivity__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <label>Premise</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Vendor Connectivity</relationshipLabel>
    <relationshipName>Vendor_Connectivity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>