UCF-APR2.4/ftr main/force-app/main/default/objects/Vendor_Connectivity__c/fields/QoS__c.field-meta.xml
<CustomField>
    <fullName>QoS__c</fullName>
    <label>QoS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>NoService</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>